feat(nuxt-layer-basic): extract unocss eslint to basic layer

--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -11,20 +11,17 @@
     "preview:build": "pnpm build && pnpm preview --host",
     "preview:generate": "pnpm generate && pnpm preview --host",
     "check-types": "nuxi typecheck",
-    "clear": "rm -rf .nuxt .output",
+    "clear": "rm -rf .nuxt .output dist",
     "postinstall": "nuxi prepare"
   },
   "devDependencies": {
     "@hebilicious/vue-query-nuxt": "catalog:",
-    "@nuxt/eslint": "catalog:",
     "@pinia/nuxt": "catalog:",
     "@project-starter/eslint-config": "workspace:*",
     "@project-starter/nuxt-layer-primo": "workspace:*",
-    "@project-starter/shared": "workspace:*",
     "@project-starter/unocss-config": "workspace:*",
     "@tanstack/vue-query": "catalog:",
     "@tanstack/vue-query-devtools": "catalog:",
-    "@unocss/nuxt": "catalog:",
     "@unocss/reset": "catalog:",
     "@vite-pwa/nuxt": "catalog:",
     "nuxt": "catalog:",
