--- a/packages/nuxt-layer-basic/package.json
+++ b/packages/nuxt-layer-basic/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@nuxt/devtools": "catalog:",
+    "@nuxt/eslint": "catalog:",
     "@nuxt/icon": "catalog:",
+    "@nuxt/schema": "catalog:",
     "@nuxtjs/color-mode": "catalog:",
-    "@project-starter/shared": "workspace:*",
+    "@project-starter/eslint-config": "workspace:*",
+    "@project-starter/unocss-config": "workspace:*",
+    "@unocss/nuxt": "catalog:",
     "@vueuse/core": "catalog:",
     "@vueuse/motion": "catalog:",
     "@vueuse/nuxt": "catalog:",
