--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,11 +1,5 @@
 {
   "name": "@project-starter/typescript-config",
   "type": "module",
-  "private": true,
-  "peerDependencies": {
-    "typescript": "^5.5.4"
-  },
-  "devDependencies": {
-    "typescript": "catalog:"
-  }
+  "private": true
 }
