--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,7 @@ packages:
   - packages/*
 catalog:
   '@antfu/eslint-config': ^3.12.1
+  '@ctrl/tinycolor': ^4.1.0
   '@hebilicious/vue-query-nuxt': ^0.3.0
   '@iconify-json/prime': ^1.2.2
   '@iconify/utils': ^2.2.1
@@ -17,7 +18,6 @@ catalog:
   '@tanstack/vue-query': ^5.62.9
   '@tanstack/vue-query-devtools': ^5.62.9
   '@types/nprogress': ^0.2.3
-  '@types/tinycolor2': ^1.4.6
   '@unocss/eslint-plugin': ^0.65.2
   '@unocss/nuxt': ^0.65.2
   '@unocss/reset': ^0.65.2
@@ -31,7 +31,7 @@ catalog:
   axios: ^1.7.9
   chart.js: ^4.4.7
   consola: ^3.3.1
-  dayjs: ^1.11.13
+  date-fns: ^4.1.0
   defu: ^6.1.4
   es-toolkit: ^1.30.1
   eslint: ^9.17.0
@@ -52,7 +52,6 @@ catalog:
   postcss-preset-env: ^10.1.2
   primevue: ^4.2.4
   rimraf: ^6.0.1
-  tinycolor2: ^1.6.0
   type-fest: ^4.30.2
   typescript: ^5.7.2
   unbuild: ^3.0.1
