--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,11 @@
     "source.organizeImports": "never"
   },
 
+  // TODO TypeScript Configuration Files
+  // This feature is currently experimental and may change in future versions.
+  // @see https://eslint.org/docs/latest/use/configure/configuration-files#typescript-configuration-files
+  "eslint.options": { "flags": ["unstable_ts_config"] },
+
   // Silent the stylistic rules in you IDE, but still auto fix them
   "eslint.rules.customizations": [
     { "rule": "style/*", "severity": "off" },
