feat(shared/timer): add pausable api

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -18,6 +18,7 @@
     "date-fns": "catalog:",
     "defu": "catalog:",
     "es-toolkit": "catalog:",
+    "pausable-timers": "catalog:",
     "type-fest": "catalog:",
     "vee-validate": "catalog:",
     "vue": "catalog:",
