feat(nuxt-layer-primo): solve prime color flash while difference with local color
- `options.loadedStyleNames`: style should ignore load on first loading to cooperate with  `loadStyles: true`, and avoid immediate set theme (https://github.com/primefaces/primevue/blob/2ebda30c1048bf989c1f37d8b17f91f071d25fa5/packages/core/src/config/PrimeVue.js#L236)

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
   "pnpm": {
     "patchedDependencies": {
       "nprogress": "patches/nprogress.patch",
-      "@primevue/nuxt-module": "patches/@primevue__nuxt-module.patch"
+      "@primevue/nuxt-module": "patches/@primevue__nuxt-module.patch",
+      "@primevue/core": "patches/@primevue__core.patch",
+      "primevue": "patches/primevue.patch"
     }
   },
   "lint-staged": {
