--- a/packages/nuxt-layer-basic/package.json
+++ b/packages/nuxt-layer-basic/package.json
@@ -5,6 +5,7 @@
   "main": "./nuxt.config.ts",
   "scripts": {
     "dev": "nuxi prepare",
+    "dev:playground": "nuxi dev playground --host",
     "check-types": "nuxi typecheck",
     "clear": "rm -rf .nuxt .output",
     "postinstall": "nuxi prepare"
@@ -15,6 +16,7 @@
     "@nuxt/icon": "catalog:",
     "@nuxt/schema": "catalog:",
     "@nuxtjs/color-mode": "catalog:",
+    "@nuxtjs/seo": "^2.0.2",
     "@unocss/nuxt": "catalog:",
     "@vueuse/core": "catalog:",
     "@vueuse/motion": "catalog:",
