--- a/packages/nuxt-layer-basic/package.json
+++ b/packages/nuxt-layer-basic/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/devtools": "catalog:",
     "@nuxt/eslint": "catalog:",
+    "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "catalog:",
     "@nuxt/schema": "catalog:",
     "@nuxtjs/color-mode": "catalog:",
