--- a/packages/nuxt-layer-primo/package.json
+++ b/packages/nuxt-layer-primo/package.json
@@ -8,6 +8,7 @@
   "main": "./nuxt.config.ts",
   "scripts": {
     "dev": "nuxi prepare",
+    "dev:playground": "nuxi dev playground --host",
     "check-types": "nuxi typecheck",
     "clear": "rm -rf .nuxt .output",
     "postinstall": "nuxi prepare"
