--- a/packages/nuxt-layer-primo/package.json
+++ b/packages/nuxt-layer-primo/package.json
@@ -10,8 +10,8 @@
     "dev": "nuxi prepare",
     "dev:playground": "nuxi dev playground --host",
     "check-types": "nuxi typecheck",
-    "clear": "rm -rf .nuxt .output",
-    "postinstall": "nuxi prepare"
+    "clear": "rm -rf **/.nuxt **/.output",
+    "postinstall": "nuxi prepare && nuxi prepare playground"
   },
   "dependencies": {
     "@iconify-json/prime": "catalog:",
