chore: eslint flag for ts config is noneed
see [v9.18.0](https://github.com/eslint/eslint/releases/tag/v9.18.0) , [commit: 8efc2d0](https://github.com/eslint/eslint/commit/8efc2d0c92dab6099f34c1479cd80bdc5cd1b07b)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
   // TODO TypeScript Configuration Files
   // This feature is currently experimental and may change in future versions.
   // @see https://eslint.org/docs/latest/use/configure/configuration-files#typescript-configuration-files
-  "eslint.options": { "flags": ["unstable_ts_config"] },
+  // "eslint.options": { "flags": ["unstable_ts_config"] },
 
   // Silent the stylistic rules in you IDE, but still auto fix them
   "eslint.rules.customizations": [
