--- a/apps/uniapp/package.json
+++ b/apps/uniapp/package.json
@@ -37,6 +37,7 @@
     "build:quickapp-webview": "uni build -p quickapp-webview",
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
+    "clear": "rimraf dist || true",
     "check-types": "vue-tsc --noEmit"
   },
   "dependencies": {
