--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -7,7 +7,7 @@
     "build": "vitepress build",
     "generate": "vitepress build",
     "preview": "vitepress preview --host",
-    "clear": "rm -rf .vitepress/dist .vitepress/cache"
+    "clear": "rimraf .vitepress/dist; rimraf .vitepress/cache || true"
   },
   "dependencies": {
     "vitepress": "catalog:"
