pref(apps/uniapp): use global vue
- for mp, uniapp will use special vue by itself, so don not worry

--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,10 @@
       "cache": false,
       "persistent": true
     },
+    "@project-starter/uniapp#dev": {
+      "cache": false,
+      "persistent": true
+    },
     "build": {
       "dependsOn": ["^build", "check-types"]
     },
