--- a/apps/uniapp/package.json
+++ b/apps/uniapp/package.json
@@ -56,7 +56,7 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4020920240930001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4020920240930001",
     "@vueuse/core": "^12.4.0",
-    "vue": "3.4.38"
+    "vue": "catalog:"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.14",
