--- a/apps/uniapp/tsconfig.json
+++ b/apps/uniapp/tsconfig.json
@@ -21,9 +21,7 @@
     "plugins": ["@uni-helper/uni-types/volar-plugin"]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue"
+    "src",
+    "plugins"
   ]
 }
