Revert "chore(apps/uniapp): fix types"
This reverts commit d5a50daf0dedd59a9f4d7acf2c45d174134ee09c.

--- a/apps/uniapp/tsconfig.json
+++ b/apps/uniapp/tsconfig.json
@@ -21,7 +21,9 @@
     "plugins": ["@uni-helper/uni-types/volar-plugin"]
   },
   "include": [
-    "src",
-    "plugins"
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
   ]
 }
