--- a/packages/nuxt-layer-basic/package.json
+++ b/packages/nuxt-layer-basic/package.json
@@ -5,10 +5,9 @@
   "main": "./nuxt.config.ts",
   "scripts": {
     "dev": "nuxi prepare",
-    "dev:playground": "nuxi dev playground --host",
     "check-types": "nuxi typecheck",
-    "clear": "rimraf **/.nuxt; rimraf **/.output; rimraf **/dist || true",
-    "postinstall": "nuxi prepare && nuxi prepare playground"
+    "clear": "rimraf .nuxt; rimraf .output; rimraf dist || true",
+    "postinstall": "nuxi prepare"
   },
   "dependencies": {
     "@nuxt/devtools": "catalog:",
