--- a/packages/nuxt-layer-basic/package.json
+++ b/packages/nuxt-layer-basic/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nuxi prepare",
     "check-types": "nuxi typecheck",
-    "clear": "rimraf .nuxt; rimraf .output; rimraf dist || true",
+    "clear": "pnpx rimraf .nuxt .output dist",
     "postinstall": "nuxi prepare"
   },
   "dependencies": {
