--- a/apps/uniapp/package.json
+++ b/apps/uniapp/package.json
@@ -38,7 +38,7 @@
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
     "clear": "pnpx rimraf dist",
-    "check-types": "vue-tsc --noEmit"
+    "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-4020920240930001",
