--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "preview": "turbo run preview",
     "preview:build": "turbo run preview:build",
     "preview:generate": "turbo run preview:generate",
-    "check-types": "turbo run check-types",
+    "typecheck": "turbo run typecheck",
     "root:lint": "eslint .",
     "root:lint:fix": "eslint . --fix",
     "clear": "pnpx turbo run clear || pnpx rimraf@^6.0.1 -g '**/.turbo' '**/coverage' '**/node_modules'",
