--- a/packages/nuxt-layer-basic/package.json
+++ b/packages/nuxt-layer-basic/package.json
@@ -5,7 +5,7 @@
   "main": "./nuxt.config.ts",
   "scripts": {
     "dev": "nuxi prepare",
-    "check-types": "nuxi typecheck",
+    "typecheck": "nuxi typecheck",
     "clear": "pnpx rimraf .nuxt .output dist",
     "postinstall": "nuxi prepare"
   },
