--- a/packages/unocss-config/package.json
+++ b/packages/unocss-config/package.json
@@ -7,7 +7,7 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "check-types": "tsc --noEmit"
+    "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
     "@iconify/utils": "catalog:",
