--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,6 +11,7 @@ catalog:
   '@iconify/utils': ^2.3.0
   '@nuxt/devtools': ^2.5.0
   '@nuxt/eslint': ^1.4.1
+  '@nuxt/fonts': ^0.11.4
   '@nuxt/icon': ^1.14.0
   '@nuxt/schema': ^3.17.5
   '@nuxtjs/color-mode': ^3.5.2
