--- a/apps/uniapp/package.json
+++ b/apps/uniapp/package.json
@@ -87,7 +87,7 @@
     "postcss-preset-env": "^10.2.3",
     "sass": "1.78.0",
     "typescript": "5.5.4",
-    "unocss": "^66.2.3",
+    "unocss": "66.1.0-beta.10",
     "unplugin-auto-import": "^19.3.0",
     "vite": "^6.3.5",
     "vite-plugin-legacy-swc": "^1.2.3",
