feat(patch): vueuse useTransition support custom window
waiting pr https://github.com/vueuse/vueuse/pull/4850

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
       "nprogress": "patches/nprogress.patch",
       "@primevue/nuxt-module": "patches/@primevue__nuxt-module.patch",
       "@primevue/core": "patches/@primevue__core.patch",
-      "primevue": "patches/primevue.patch"
+      "primevue": "patches/primevue.patch",
+      "@vueuse/core@13.3.0": "patches/@vueuse__core@13.3.0.patch"
     }
   },
   "lint-staged": {
