--- a/apps/uniapp/package.json
+++ b/apps/uniapp/package.json
@@ -55,7 +55,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4020920240930001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4020920240930001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4020920240930001",
-    "@vueuse/core": "^13.3.0",
+    "@vueuse/core": "catalog:",
     "vue": "catalog:"
   },
   "devDependencies": {
@@ -86,7 +86,7 @@
     "miniprogram-api-typings": "^4.0.7",
     "postcss-preset-env": "^10.2.3",
     "sass": "1.78.0",
-    "typescript": "5.5.4",
+    "typescript": "catalog:",
     "unocss": "66.1.0-beta.10",
     "unplugin-auto-import": "^19.3.0",
     "vite": "^6.3.5",
