--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.12.1",
+  "packageManager": "pnpm@10.12.4",
   "engines": {
     "node": ">=22.14.0"
   },
@@ -31,9 +31,9 @@
     "husky": "catalog:",
     "jiti": "catalog:",
     "lint-staged": "catalog:",
+    "tsdown": "catalog:",
     "turbo": "latest",
     "typescript": "catalog:",
-    "unbuild": "catalog:",
     "vitest": "catalog:"
   },
   "pnpm": {
