--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.12.4",
+  "packageManager": "pnpm@10.13.1",
   "engines": {
     "node": ">=22.14.0"
   },
@@ -41,8 +41,7 @@
       "nprogress": "patches/nprogress.patch",
       "@primevue/nuxt-module": "patches/@primevue__nuxt-module.patch",
       "@primevue/core": "patches/@primevue__core.patch",
-      "primevue": "patches/primevue.patch",
-      "@vueuse/core@13.3.0": "patches/@vueuse__core@13.3.0.patch"
+      "primevue": "patches/primevue.patch"
     }
   },
   "lint-staged": {
