--- a/playgrounds/nuxt-layer-primo/package.json
+++ b/playgrounds/nuxt-layer-primo/package.json
@@ -13,7 +13,7 @@
     "@project-starter/nuxt-layer-primo": "workspace:*"
   },
   "devDependencies": {
-    "nuxt": "catalog:",
-    "vue-tsc": "catalog:"
+    "nuxt": "catalog:frontend-nuxt",
+    "vue-tsc": "catalog:dev"
   }
 }
