refactor: rename catalog

--- a/apps/uniapp/package.json
+++ b/apps/uniapp/package.json
@@ -84,12 +84,12 @@
     "@vue/tsconfig": "catalog:dev",
     "core-js": "^3.45.0",
     "miniprogram-api-typings": "^4.1.0",
-    "postcss-preset-env": "catalog:building",
+    "postcss-preset-env": "catalog:build",
     "sass": "1.78.0",
     "typescript": "catalog:dev",
     "unocss": "66.1.0-beta.10",
     "unplugin-auto-import": "catalog:dev",
-    "vite": "catalog:building",
+    "vite": "catalog:build",
     "vite-plugin-legacy-swc": "^2.0.0",
     "vue-tsc": "catalog:dev",
     "wot-design-uni": "^1.11.1"
