--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,7 +6,7 @@ packages:
 catalog:
 
 catalogs:
-  building:
+  build:
     jiti: ^2.5.1
     postcss-preset-env: ^10.2.4
     tsdown: ^0.13.4
@@ -71,7 +71,7 @@ catalogs:
     '@iconify-json/prime': ^1.2.2
     '@iconify/utils': ^3.0.0
     '@nuxt/icon': ^1.15.0
-  inlined:
+  inline:
     es-toolkit: ^1.39.8
   lint:
     '@antfu/eslint-config': ^5.2.0
@@ -81,7 +81,7 @@ catalogs:
     eslint-plugin-format: ^1.0.1
     husky: ^9.1.7
     lint-staged: ^16.1.4
-  testing:
+  test:
     '@vitest/coverage-v8': ^3.2.4
     vitest: ^3.2.4
   types:
